180629 tiles예제 005 login폼을 tiles적용

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -55,5 +55,16 @@
 	</filter-mapping>
   
   
+  <servlet>
+  	<servlet-name>dispatcherTiles2</servlet-name>
+  	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  	<load-on-startup>1</load-on-startup>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>dispatcherTiles2</servlet-name>
+  	<url-pattern>/tiles2/*</url-pattern>
+  </servlet-mapping>
+  
   
 </web-app>
