--- a/src/messages/validation.properties
+++ b/src/messages/validation.properties
@@ -1,6 +1,6 @@
 required = \uD544\uC218 \uD56D\uBAA9\uC785\uB2C8\uB2E4.
-required.login.id = \uB85C\uADF8\uC778 ID\uB294 \uD544\uC218 \uD56D\uBCF5\uC785\uB2C8\uB2E4.
-required.login.password = \uB85C\uADF8\uC778 \uC554\uD638\uB294 \uD544\uC218 \uD56D\uBCF5\uC785\uB2C8\uB2E4.
+required.login.id = \uB85C\uADF8\uC778 ID\uB294 \uD544\uC218 \uD56D\uBAA9\uC785\uB2C8\uB2E4.
+required.login.password = \uB85C\uADF8\uC778 \uC554\uD638\uB294 \uD544\uC218 \uD56D\uBAA9\uC785\uB2C8\uB2E4.
 required.login.loginType = \uB85C\uADF8\uC778 \uD0C0\uC785\uC740 \uBC18\uB4DC\uC2DC \uC120\uD0DD\uD558\uC154\uC57C \uD569\uB2C8\uB2E4.
 invalidIdOrPassword = \uC798\uBABB\uB41C ID\uB098 \uC554\uD638\uB97C \uC785\uB825\uD558\uC168\uC2B5\uB2C8\uB2E4. \uC785\uB825\uD55C ID\uB294 {0}\uC785\uB2C8\uB2E4.
 duplicate.homapageUrl = \uC774\uBBF8 \uB4F1\uB85D\uB41C \uC8FC\uC18C\uC785\uB2C8\uB2E4.
