--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -68,5 +68,16 @@
   	<url-pattern>/tiles2/*</url-pattern>
   </servlet-mapping>
   
+<!-- file Download를 위한 설정 -->  
+	<servlet>
+		<servlet-name>dispatcherNonHtml</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>dispatcherNonHtml</servlet-name>
+		<url-pattern>/download/*</url-pattern>
+	</servlet-mapping>
+  
   
 </web-app>
